fix overflowing text

--- a/public/css/survival.css
+++ b/public/css/survival.css
@@ -50,6 +50,7 @@ body {
 h1 {
   width: 95vw;
   height: 50%;
+  padding: 0 10px;
   font-size: 1.2rem;
   margin-top: 10px;
   margin-bottom: 10px;
